--- a/config.toml
+++ b/config.toml
@@ -74,6 +74,8 @@ defaultContentLanguage = 'en'
 
   enable_anchor_link = true
 
+  custom_css = ["css/custom.css"]
+
   [params.homepage_meta_tags]
     meta_description = "Explore Profileo Security's advisories, vulnerability reporting guidelines, and security policies. Stay informed and collaborate with our security team to enhance the safety of the digital environment."
     meta_og_title = "Profileo security"
