--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ version: '3.0'
 services:
     hugo:
         image: klakegg/hugo:0.101.0-ext
-        command: server
+        command: server --appendPort=false
         volumes:
             - ".:/src"
         ports:
